<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:icon="@drawable/btn_google_signin_light_normal_web"
            android:id="@+id/navigation_home"
            android:enabled="true"
            android:title="@string/title_home"/>

    <item
            android:icon="@mipmap/ic_news"
            android:enabled="true"
            android:id="@+id/navigation_news"
            android:title="@string/title_news"/>

    <item
            android:icon="@mipmap/ic_history"
            android:enabled="true"
            android:id="@+id/navigation_history"
            android:title="@string/title_history"/>

    <item
            android:icon="@mipmap/ic_profile"
            android:enabled="true"
            android:id="@+id/navigation_profile"
            android:title="@string/title_profile"/>

</menu>