<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetEnd="0dp"
                android:contentInsetRight="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="none">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <RelativeLayout
                        android:id="@+id/search_main"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="@dimen/spacing_small"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:layout_marginRight="@dimen/spacing_normal"
                        android:layout_marginBottom="@dimen/spacing_small"
                        android:layout_toLeftOf="@+id/btn_cancel">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/input_search"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_input_search_blue"
                            android:hint="@string/search"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:maxLines="1"
                            android:paddingStart="47dp"
                            android:paddingLeft="47dp"
                            android:paddingEnd="32dp"
                            android:paddingRight="32dp"
                            android:textColor="@color/colorPrimary"
                            android:textColorHint="@color/colorPrimary"
                            android:textSize="12sp"
                            android:theme="@style/TextSearchInput" />

                        <ImageButton
                            android:id="@+id/btn_search"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/spacing_normal"
                            android:layout_marginLeft="@dimen/spacing_normal"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:contentDescription="@string/cd_ic_search"
                            android:src="@drawable/ic_search_small"
                            android:textAllCaps="false" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="18dp"
                        android:layout_marginRight="18dp"
                        android:contentDescription="@string/clear_search"
                        android:gravity="center_vertical"
                        android:text="@string/cancel2"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal" />

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
